--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
     <meta name="description" content="this is an ecommerce project for Suraiya Digital Collection">
 </head>
 <body>
-    <h1>Suraiya Digital Collection</h1>
+    <!-- navbar starts here -->
+    <nav>
+        <ul class="nav-upper flex-space-around">
+          <li class="nav-list">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-list">
+            <a href="register.html" class="nav-link">Register</a>
+          </li>
+          <li class="nav-list">
+            <a href="login.html" class="nav-link">Login</a>
+          </li>
+          <li class="nav-list">
+            <a href="index.html" class="nav-link">Logout</a>
+          </li>
+          <li class="nav-list">
+            <a href="contact.html" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-list">
+            <a href="profile.html" class="nav-link">
+                <img class="profile-icon" src="image/image.jpg" alt="profile icon">
+            </a>
+          </li>
+        </ul>
+
+        <ul class="nav-lower flex-space-around">
+            <li class="nav-list">
+                <a class="nav-link nav-brand" href="index.html">Suraiya Digital Collection</a>
+            </li>
+            <li class="nav-list">
+                <a class="nav-link" href="cart.html">
+                    <span><i class="fa-solid fa-cart-shopping"></i></span>
+                    Cart 2 products - $ 125.4
+                </a>
+            </li>
+        </ul>
+
+    </nav>
+    <!-- navbar ends here -->
+
+    <!-- header starts here -->
+    <!-- header starts here -->
 </body>
 </html>
