--- a/index.html
+++ b/index.html
@@ -52,5 +52,19 @@
 
     <!-- header starts here -->
     <!-- header starts here -->
+
+    <!-- footer starts here -->
+     <footer class="footer flex-space-around">
+        <div class="flex-space-around">
+            <label for="subscribe">Subscribe to NewsLetter:</label>
+             <input type="email" id="subscribe" name="subscribe" class="footer-input"
+             placeholder="Your Email Address">
+             <button class="btn btn-subscribe">Subscribe</button>
+        </div>
+        <div>
+             <p>&copy;Copyright 2025 Suraiya Digital Collection All rights reserved</p>
+        </div>
+     </footer>
+    <!-- footer starts here -->
 </body>
 </html>
