--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <!-- navbar starts here -->
-    <nav>
+     <i class="fas fa-bars fa-2x" id="menu-icon"></i>
+    <nav id="menu" class="hidden">
         <ul class="nav-upper flex-space-around">
           <li class="nav-list">
             <a href="index.html" class="nav-link">Home</a>
@@ -50,8 +51,342 @@
     </nav>
     <!-- navbar ends here -->
 
-    <!-- header starts here -->
-    <!-- header starts here -->
+    <!-- header ends here -->
+      <header class="header">
+           <div class="banner flex-space-around">
+            <marquee class="banner-title" behavior="" direction="">50% Sales going on</marquee>
+            <div class="features flex-space-around">
+              <article class="feature flex-center">
+                    <i class="fa-solid fa-truck feature-icon"></i>
+                    <h3>Shipping within 7 days</h3>
+              </article>
+              <article class="feature flex-center">
+                <i class="fa-brands fa-rocketchat feature-icon"></i>
+                <h3>Support 24/7</h3>
+          </article>
+              <article class="feature flex-center">
+                    <i class="fa-regular fa-credit-card feature-icon"></i>
+                    <h3>Safe Payment</h3>
+              </article>
+            </div>
+           </div>  
+      </header>
+    <!-- header ends here -->
+
+   <main class="flex-center">
+    <div class="sidebar">
+      <section class="categories-section">
+            <h3 class="section-title">Categories</h3>
+              <ul class="list">
+                <li class="list_item">
+                  <label for="phone">
+                    <input type="checkbox" name="phone" id="phone" value="phone">
+                    Phone
+                  </label>
+                <li class="list_item">
+                  <label for="tablet">
+                    <input type="checkbox" name="tablet" id="tablet" value="tablet">
+                    Tablet
+                  </label>
+                </li>
+                <li class="list_item">
+                  <label for="telivisions">
+                    <input type="checkbox" name="telivisions" id="telivisions" value="telivisions">
+                    Telivision
+                  </label>
+                </li>
+                <li class="list_item">
+                  <label for="computers">
+                    <input type="checkbox" name="computers" id="computers" value="computers">
+                    Computers
+                  </label>
+                </li>
+                <li class="list_item">
+                  <label for="headphones">
+                    <input type="checkbox" name="headphones" id="headphones" value="headphones">
+                    Headphones
+                  </label>
+                </li>
+              </ul>
+      </section>
+      <section class="price-section">
+            <h3 class="section-title">Categories</h3>
+              <ul class="list">
+                <li class="list_item">
+                  <label for="price1">
+                    <input type="radio" name="price" id="price1" value="[0,20]">
+                    $0-$20
+                  </label>
+               </li>
+                <li class="list_item">
+                  <label for="price2">
+                    <input type="radio" name="price" id="price1" value="[50,80]">
+                    $50-$80
+                  </label>
+               </li>
+                <li class="list_item">
+                  <label for="price3">
+                    <input type="radio" name="price" id="price1" value="[220,400]">
+                    $220-$400
+                  </label>
+               </li>
+                <li class="list_item">
+                  <label for="price4">
+                    <input type="radio" name="price" id="price1" value="[110,200]">
+                    $110-$200
+                  </label>
+               </li>
+                <li class="list_item">
+                  <label for="price5">
+                    <input type="radio" name="price" id="price1" value="[20,40]">
+                    $20-$40
+                  </label>
+               </li>
+              </ul>
+      </section>
+      <section class="shippinge-section">
+        <h3 class="section-title">Shipping option</h3>
+          <ul class="list">
+            <li class="list_item">
+              <label for="free">
+                <input type="radio" name="shipping" id="free" value="free">
+                Free
+              </label>
+           </li>
+            <li class="list_item">
+              <label for="paid">
+                <input type="radio" name="shipping" id="paid" value="paid">
+                Paid
+              </label>
+           </li>
+          </ul>
+      </section>
+    </div>
+    <div class="main-content">
+      <section class="actions flex-space-around">
+                   <div class="actions_sort">
+                    <label for="sort">Sort By:</label>
+                    <select name="sort" id="sort">
+                           <option value="sold">Most sold first</option>
+                           <option value="rating">Most rated first</option>
+                           <option value="price">Cheapest first</option>
+                           <option value="arrival">Newest first</option>
+                           <option value="discount">Biggest discount first</option>
+                    </select>
+                   </div>
+
+                   <div class="actions_search">
+                    <input type="text" name="" id="" placeholder="Search Product">
+                    <button class="btn">
+                      <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+                    </button>
+                   </div>
+      </section>
+       <!--products section starts here-->
+                  
+      <section class="products">
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/headphones.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/headphone.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/laptop.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/phone.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/phones.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/telivision.webp" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/phones.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/headphone.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+        <article class="product card">
+            <div class="badge">
+                <span>5 in stock</span>
+                <hr class="hr-design">
+                <span>3 sold</span>
+            </div>
+            <img class="product_img" src="./image/laptop.jpg" alt="product1">
+            <div class="product_body">
+              <h3 class="product_name">Sony Headphone</h3>
+              <p>
+                <span class="dot green"></span>
+                <span class="dot black"></span>
+                <span class="dot red"></span>
+              </p>
+              <p class="product_description">consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                ..... <a href="/product.html" class="learn-more">Learn More</a>
+              </p>
+              <h4 class="product_price">$225.55</h4>
+              <p class="product_rating">Rating: 4.5/5</p>
+              <button class="btn product_buttton">Add to Cart</button>
+            </div>
+        </article>
+      </section>
+      <!--products section ends here-->
+    </div>
+   </main>
 
     <!-- footer starts here -->
      <footer class="footer flex-space-around">
@@ -66,5 +401,6 @@
         </div>
      </footer>
     <!-- footer starts here -->
+     <script src="./scripts/script.js"></script>
 </body>
 </html>
