--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
             <img class="product_img" src="./image/laptop.jpg" alt="product1">
             <div class="product_body">
-              <h3 class="product_name">Sony Headphone</h3>
+              <h3 class="product_name">Sony Laptop</h3>
               <p>
                 <span class="dot green"></span>
                 <span class="dot black"></span>
@@ -259,7 +259,7 @@
             </div>
             <img class="product_img" src="./image/phone.jpg" alt="product1">
             <div class="product_body">
-              <h3 class="product_name">Sony Headphone</h3>
+              <h3 class="product_name">Phone</h3>
               <p>
                 <span class="dot green"></span>
                 <span class="dot black"></span>
@@ -281,7 +281,7 @@
             </div>
             <img class="product_img" src="./image/phones.jpg" alt="product1">
             <div class="product_body">
-              <h3 class="product_name">Sony Headphone</h3>
+              <h3 class="product_name">Sony Phone</h3>
               <p>
                 <span class="dot green"></span>
                 <span class="dot black"></span>
@@ -303,7 +303,7 @@
             </div>
             <img class="product_img" src="./image/telivision.webp" alt="product1">
             <div class="product_body">
-              <h3 class="product_name">Sony Headphone</h3>
+              <h3 class="product_name">Sony Telivision</h3>
               <p>
                 <span class="dot green"></span>
                 <span class="dot black"></span>
@@ -325,7 +325,7 @@
             </div>
             <img class="product_img" src="./image/phones.jpg" alt="product1">
             <div class="product_body">
-              <h3 class="product_name">Sony Headphone</h3>
+              <h3 class="product_name">Sony Phone</h3>
               <p>
                 <span class="dot green"></span>
                 <span class="dot black"></span>
@@ -369,7 +369,7 @@
             </div>
             <img class="product_img" src="./image/laptop.jpg" alt="product1">
             <div class="product_body">
-              <h3 class="product_name">Sony Headphone</h3>
+              <h3 class="product_name">Sony laptop</h3>
               <p>
                 <span class="dot green"></span>
                 <span class="dot black"></span>
@@ -384,6 +384,24 @@
             </div>
         </article>
       </section>
+      <div class="pagination">
+        <button class="btn pagination_btn">
+          <i class="fas fa-less-than"></i></button>
+        <button class="btn pagination_btn">2</button>
+        <button class="btn pagination_btn">3</button>
+        <button class="btn pagination_btn">4</button>
+        <button class="btn pagination_btn">5</button>
+        <button class="btn pagination_btn">6</button>
+        <button class="btn pagination_btn">7</button>
+        <button class="btn pagination_btn">8</button>
+        <button class="btn pagination_btn">9</button>
+        <button class="btn pagination_btn">10</button>
+        <button class="btn pagination_btn">...</button>
+        <button class="btn pagination_btn">50</button>
+        <button class="btn pagination_btn">
+          <i class="fas fa-greater-than"></i>
+        </button>
+      </div>
       <!--products section ends here-->
     </div>
    </main>
