--- a/product.html
+++ b/product.html
@@ -51,8 +51,31 @@
     </nav>
     <!-- navbar ends here -->
 
-    <!-- header starts here -->
-    <!-- header starts here -->
+     <main class="flex-center">
+          <div class="main-content flex-center">
+              <section class="product-details-left">
+                <img src="/image/headphones.jpg" alt="product1">
+              </section>
+              <section class="product-details-right">
+                <div class="product_body">
+                  <h3 class="product_name">Sony Headphone</h3>
+                  <p>
+                    <span class="dot green"></span>
+                    <span class="dot black"></span>
+                    <span class="dot red"></span>
+                  </p>
+                  <p class="product_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum facilis fuga eligendi assumenda et perferendis aliquid ipsam eos iure sequi fugiat eveniet, atque, sit libero rerum accusamus, deleniti voluptatum enim blanditiis adipisci. Dolorem nulla quisquam temporibus ipsam, harum laborum, dolores ullam nihil, iusto error consequatur unde aperiam amet nemo consectetur?
+                    consectetur adipisicing elit. Sapiente, accusantium.Lorem ipsum dolor sit amet, consectetur adipi
+                    ..... <a href="/product.html" class="learn-more">Learn More</a>
+                  </p>
+                  <h4 class="product_price">$225.55</h4>
+                  <p class="product_rating">Rating: 4.5/5</p>
+                  <button class="btn product_buttton">Add to Cart</button>
+                  <button class="btn product_buttton">Back to Shopping</button>
+                </div>
+              </section>
+          </div>
+     </main>
 
     <!-- footer starts here -->
      <footer class="footer flex-space-around">
