--- a/cart.html
+++ b/cart.html
@@ -52,7 +52,75 @@
     <!-- navbar ends here -->
 
     <main>
-      <h1>cart page</h1>
+      <div class="cart  flex-center">
+          <div class="cart_items">
+            <div class="cart_items-heading card">
+                <h2 class="">Shopping cart [2 Items]</h2>
+                <div class="cart cart_items-action">
+                  <label for="select">
+                    <input type="checkbox">
+                    Select all items
+                  </label>
+                  <button class="btn">
+                    <i class="fas fa-trash-alt"></i>
+                  </button>
+                  <button class="btn">Shope More</button>
+                </div>
+            </div> 
+
+            <div class="cart_item cart flex-space-around">
+              <input type="checkbox" name="" id="">
+              <img class="cart_item-img" src="./image/headphones.jpg" alt="product1">
+              <div class="cart_item-description">
+                <h3 class="product_name">Sony v-4 Headphone</h3>
+                <h4 class="product_price">Price: $225.99</h4>
+                <p class="cart_item-shipping">Free Shipping</p>
+              </div>
+              <div class="cart_item-actions">
+                <button class="btn">
+                  <i class="fas fa-trash-alt"></i>
+                </button>
+                <div>
+                  <button class="btn">
+                    <i class="fas fa-add"></i>
+                  </button>
+                  <span>3</span>
+                  <button class="btn">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cart_payment">
+            <div class="cart_payment-summary cart">
+              <h2>Payment Summary</h2>
+              <div>
+                <p>Subtotal:</p>
+                <p>$55.22</p>
+              </div>
+              <div>
+                <p>Shipping Cost:</p>
+                <p>$505.22</p>
+              </div>
+              <div>
+                <p>Total Cost:</p>
+                <p>$550.22</p>
+              </div>
+              <button class="btn cart_payment-btn">Pay Now</button>
+            </div>
+            <div class="cart_payment-methods card ">
+              <h2>Payment Methods</h2>
+              <div>
+                <i class="fa-brands fa-cc-visa fa-3x"></i>
+                <i class="fa-brands fa-cc-apple-pay fa-3x"></i>
+                <i class="fa-brands fa-cc-amex fa-3x"></i>
+                <i class="fa-brands fa-cc-amazon-pay fa-3x"></i>
+                <i class="fa-brands fa-cc-paypal fa-3x"></i>
+              </div>
+            </div>
+          </div>
+      </div>
     </main>
 
     <!-- footer starts here -->
