--- a/register.html
+++ b/register.html
@@ -51,8 +51,34 @@
     </nav>
     <!-- navbar ends here -->
 
-    <!-- header starts here -->
-    <!-- header starts here -->
+    <main>
+      <section class="register">
+        <h2 class="section-title text-center">User Registration</h2>
+        <div class="card">
+            <form action="" class="form">
+              <div class="form-control flex-center">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" required autocomplete="name">
+              </div>
+              <div class="form-control flex-center">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required autocomplete="email">
+              </div>
+              <div class="form-control flex-center">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" required autocomplete="password">
+              </div>
+              <div class="form-control flex-center">
+                <label for="about">About Me</label>
+                <textarea name="about" id="about"></textarea>
+              </div>
+              <div class="form-control flex-center form-btn-field">
+              <button type="submit" class="btn contact-btn">Submit</button>
+              </div>
+            </form>
+        </div>
+      </section>
+    </main>
 
     <!-- footer starts here -->
      <footer class="footer flex-space-around">
