--- a/login.html
+++ b/login.html
@@ -50,9 +50,24 @@
 
     </nav>
     <!-- navbar ends here -->
-
-    <!-- header starts here -->
-    <!-- header starts here -->
+    <section class="login">
+      <h2 class="section-title text-center">User Login</h2>
+      <div class="card">
+          <form action="" class="form">
+            <div class="form-control flex-center">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" required autocomplete="email">
+            </div>
+            <div class="form-control flex-center">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" required autocomplete="password">
+            </div>
+            <div class="form-control flex-center form-btn-field">
+            <button type="submit" class="btn contact-btn">Submit</button>
+            </div>
+          </form>
+      </div>
+    </section>
 
     <!-- footer starts here -->
      <footer class="footer flex-space-around">
