--- a/profile.html
+++ b/profile.html
@@ -50,9 +50,25 @@
 
     </nav>
     <!-- navbar ends here -->
-
-    <!-- header starts here -->
-    <!-- header starts here -->
+   <main>
+    <section class="profile flex-center">
+      <h2 class="section-title text-center">User Profile</h2>
+      <div class="card flex-center">
+           <img src="./image/image.jpg" class="profile_img" alt="profile">
+           <h2 class="profile_name">Jahidul Islam</h2>
+           <p class="profle_email">bdjahid363@gmail.com</p>
+           <p slot="profile_about">I love to gadgets</p>
+           <div class="profile_buttons">
+              <button class="btn profile_edit-btn">
+                <i class="far fa-edit fa-2x"></i>
+              </button>
+              <button class="btn profile_delete-btn">
+                <i class="far fa-trash-alt fa-2x"></i>
+              </button>
+           </div>
+      </div>
+    </section>
+   </main>
 
     <!-- footer starts here -->
      <footer class="footer flex-space-around">
