--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,42 @@
 
     </nav>
     <!-- navbar ends here -->
+<main>
+  <section class="contact-section">
+    <h2 class="section-title text-center">Contact Us</h2>
+    <div class="contact-container flex-center">
+      <form action="" class="form card">
+        <div class="form-control flex-center">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" required autocomplete="name">
+        </div>
+        <div class="form-control flex-center">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" required autocomplete="email">
+        </div>
+        <div class="form-control flex-center">
+          <label for="message">Message</label>
+          <textarea name="message" id="message"></textarea>
+        </div>
+        <div class="form-control flex-center form-btn-field">
+        <button type="submit" class="btn contact-btn">Submit</button>
+        </div>
+      </form>
+      <div class="contact-address flex-space-around">
+          <address>
+            <h4>Address:</h4>
+            <p>124 bridge road</p>
+            <p>Damurhuda,Chuaganga</p>
 
-    <!-- header starts here -->
-    <!-- header starts here -->
+            <br>
+            <span>Call:</span>
+            <a href="phone:+8801948550809">+8801948550809</a>
+          </address>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234009.69694262993!2d88.56514392419392!3d23.589928984423366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f9325e7e3a13f5%3A0x7575e2f94a9d8f58!2sDamurhuda%20Upazila!5e0!3m2!1sen!2sbd!4v1738749884374!5m2!1sen!2sbd" class="contact-map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </section>
+</main>
 
     <!-- footer starts here -->
      <footer class="footer flex-space-around">
