--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
      <main class="flex-center">
           <div class="main-content flex-center">
               <section class="product-details-left">
-                <img src="/image/headphones.jpg" alt="product1">
+                <img class="img-product" src="/image/headphones.jpg" alt="product1">
               </section>
               <section class="product-details-right">
                 <div class="product_body">
